metadata/force-app/main/default/objects/CustomName_aXyRG__c/CustomName_aXyRG__c.object-meta.xml
<CustomObject>
    <description>Description_fllTA</description>
    <label>CustomLabel_eCuAo</label>
    <nameField>
        <label>CustomLabel_eCuAo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_eCuAos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>