metadata/force-app/main/default/objects/CustomName_aXyRG__c/fields/CustomField_KyjnG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_KyjnG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldSOaiB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>