metadata/force-app/main/default/objects/CustomName_aXyRG__c/fields/CustomField_XDTwl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_XDTwl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldbPuPa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>